--- a/apps/sms/style/sms.css
+++ b/apps/sms/style/sms.css
@@ -817,6 +817,20 @@ ul.contact-prompt {
   color: white;
 }
 
+body[role="application"] form[role="dialog"][data-type="action"] > section:first-child{
+  height: 8rem;
+  border-bottom: 0.1rem solid #616262;
+  padding-bottom: 1rem;
+}
+
+ul.contact-prompt .number{
+  font-size: 1.5rem;
+}
+
+ul.contact-prompt .name{
+  font-size: 2.3rem;
+  line-height: 2.5rem;
+}
 
 section[role="region"].new .article-list[data-type="list"]  li:first-child {
   margin-top: 4.6rem;
