--- a/apps/system/style/sound_manager/sound_manager.css
+++ b/apps/system/style/sound_manager/sound_manager.css
@@ -3,21 +3,62 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  right: 0;
   height: 4rem;
+  padding-right: 2rem;
   -moz-transition: opacity 0.5s ease;
   pointer-events: none;
   display: none;
   background-image: url("images/header_bg.png");
 }
 
-#volume > * {
-  line-height: 4rem;
+#volume.visible {
+  display: block;
+}
+
+#volume > span {
   height: 4rem;
-  display: inline-block;
   float: left;
   background-repeat: no-repeat, no-repeat;
   background-position: center, center;
+}
+
+#volume section {
+  overflow: hidden;
+  margin-top: 1.5rem;
+  height: 1rem;
+}
+
+/* Default shows 15 sound pieces */
+#volume section div {
+  width: 6.5%!important;
+  height: 100%;
+  float: left;
+  background: #666;
+  -moz-box-sizing: border-box;
+  border-left: solid 0.2rem #3e3e3e;
+}
+
+#volume section div:first-child {
+  border-radius: 0.6rem 0 0 0.6rem;
+  border: none;
+}
+
+#volume section div:nth-last-child(2) {
+  border-radius: 0 0.6rem 0.6rem 0;
+  /* Last visible bar */
+}
+
+#volume section div:last-child {
+  display: none;
+}
+
+#volume section div.active {
+  background: #00abcc;
+}
+
+#volume.mute section div {
+  background: #666;
 }
 
 #volume span {
@@ -26,6 +67,7 @@
   float: left;
 }
 
+/* Icon states */
 #volume span.vibration {
   visibility: hidden;
   margin-left: 0.5rem;
@@ -54,14 +96,7 @@
   margin-left: 0.5rem;
   background-image: url('images/speaker_loud_icon.png');
   background-size: 2.2rem auto;
-}
-
-#volume.visible {
-  display: block;
-}
-
-#volume[data-channel="notification"] span.vibration {
-  visibility: visible;
+/*old
 }
 
 #volume[data-channel="content"] div:nth-child(n+4),
@@ -82,47 +117,50 @@
   width: 3.4rem;
   margin-left: 0.2rem;
   background-image: url('images/volume_center_disabled.png');
+*/
+  float: right;
 }
 
-#volume[data-channel="bt_sco"] div.active:nth-child(n+4),
-#volume[data-channel="content"] div.active:nth-child(n+4),
-#volume[data-channel="alarm"] div.active:nth-child(n+4),
-#volume[data-channel="notification"] div.active:nth-child(n+4),
-#volume[data-channel="telephony"] div.active:nth-child(n+4) {
-  background-image: url('images/volume_center_active.png');
+/* Telephony channel, just shows 6 progress pieces */
+#volume[data-channel="telephony"] section div {
+  width: 16.6%!important;
 }
 
-#volume div:nth-child(3) {
-  background-image: url('images/volume_left_disabled.png');
+/* First always keep active */
+#volume[data-channel="telephony"] section div:first-child {
+  background: #00abcc;
 }
 
-#volume div.active:nth-child(3) {
-  background-image: url('images/volume_left_active.png');
+#volume[data-channel="telephony"] section div:nth-child(n+6) {
+  border-radius: 0 0.6rem 0.6rem 0;
+  /* Last visible bar */
 }
 
-#volume[data-channel="bt_sco"] div:nth-child(18),
-#volume[data-channel="alarm"] div:nth-child(17),
-#volume[data-channel="notification"] div:nth-child(17),
-#volume[data-channel="content"] div:nth-child(17),
-#volume[data-channel="telephony"] div:nth-child(8) {
-  background-image: url('images/volume_right_disabled.png');
-}
-
-#volume[data-channel="bt_sco"] div.active:nth-child(18),
-#volume[data-channel="alarm"] div.active:nth-child(17),
-#volume[data-channel="notification"] div.active:nth-child(17),
-#volume[data-channel="content"] div.active:nth-child(17),
-#volume[data-channel="telephony"] div.active:nth-child(8) {
-  background-image: url('images/volume_right_active.png');
-}
-
-#volume[data-channel="telephony"] div:nth-child(n+9),
-#volume[data-channel="notification"] div:nth-child(18),
-#volume[data-channel="alarm"] div:nth-child(18),
-#volume[data-channel="content"] div:nth-child(18) {
+#volume[data-channel="telephony"] section div:nth-child(n+7) {
   display: none;
 }
 
+/* bt_sco channel, shows 16 (all of them) progress pieces */
+#volume[data-channel="bt_sco"] section div {
+  width: 6.25%!important;
+}
+
+/* First always keep active */
+#volume[data-channel="bt_sco"] section div:first-child {
+  background: #00abcc;
+}
+
+#volume[data-channel="bt_sco"] section div:nth-last-child(2) {
+  border-radius: 0;
+}
+
+#volume[data-channel="bt_sco"] section div:last-child {
+  border-radius: 0 0.6rem 0.6rem 0;
+  display: block;
+  /* Last visible bar */
+}
+
+/*
 #volume[data-channel="notification"] > div:nth-child(n+3),
 #volume[data-channel="alarm"] > div:nth-child(n+3),
 #volume[data-channel="bt_sco"] > div:nth-child(n+3),
@@ -198,4 +236,8 @@
     width: 5.9rem;
     background-size: 5.9rem 1rem;
   }
+*/
+/* Notification channel */
+#volume[data-channel="notification"] span.vibration {
+  visibility: visible;
 }
