--- a/apps/system/style/statusbar/statusbar.css
+++ b/apps/system/style/statusbar/statusbar.css
@@ -1,5 +1,3 @@
-/* The status bar disregard the rem rule because we have only 16px icons for now */
-
 body, html {
   font-family: MozTT, sans-serif;
   font-weight: 500;
@@ -175,6 +173,7 @@ body, html {
 .sb-icon-wifi[data-level="0"][data-connecting="true"] {
   background: url('images/wifi-connecting.gif') no-repeat;
   background-position: 0 0;
+  background-size: 1.6rem;
 }
 
 .sb-icon-wifi:not([data-level]),
@@ -397,7 +396,7 @@ body, html {
   left: 0;
   width: 100%;
   text-align: center;
-  font-size: 1.15rem; /*5pt  was 8px */
+  font-size: 1.15rem; /*5pt  was 0.8rem */
 }
 
 /* JW: should we show how many current download we have
@@ -406,12 +405,12 @@ body, html {
   /* JW: waiting for the correct icon; in the mean time I made this one */
   background: url('images/system-downloads.gif') no-repeat;
   background-position: 0 0;
-  background-size: 1.6rem;
+  background-size: 1.6rem 1.6rem;
 }
 
 .sb-icon-call-forwarding {
   /* Waiting for the correct icon. In the mean time we use this one. */
-  background: url('images/call-forwarding.png') no-repeat;
+  background: url('images/call-forwarding.png') no-repeat / 1.6rem;
   background-position: 0 0;
   background-size: 1.6rem 1.6rem;
 }
