--- a/apps/system/style/utility_tray/utility_tray.css
+++ b/apps/system/style/utility_tray/utility_tray.css
@@ -8,9 +8,9 @@
 
 #utility-tray {
   position: absolute;
-  top: -moz-calc(-100% + 4rem);
-  width: -moz-calc(100%);
-  height: -moz-calc(100% - 2rem);
+  top: calc(-100% + 4rem);
+  width: calc(100%);
+  height: calc(100% - 2rem);
   background-color: rgba(0, 0, 0, 0.7);
   visibility: hidden;
 }
@@ -21,9 +21,7 @@
   bottom: 0;
   width: 100%;
   height: 2rem;
-
   border-bottom: 0.1rem solid #111;
   border-top: 0.1rem solid #111;
-
   background: #111 url('images/grippy.png') no-repeat center / 2rem;
 }
