Small fix following UI specs

--- a/apps/sms/style/sms.css
+++ b/apps/sms/style/sms.css
@@ -658,6 +658,10 @@ form.bottom[role="search"].messages-compose-form {
   height: 4rem;
 }
 
+#loading p {
+  border-bottom: none;
+}
+
 /*
   No result container
 */
