--- a/apps/system/style/modal_dialog/modal_dialog.css
+++ b/apps/system/style/modal_dialog/modal_dialog.css
@@ -9,6 +9,10 @@
   display: none;
 }
 
+.hidden {
+  display: none;
+}
+
 #authentication-dialog input,
 #modal-dialog input {
   border-radius: 0.2rem;
@@ -52,7 +56,7 @@
 
 /* Select one dialog */
 
-#modal-dialog-select-one .modal-dialog-message-container {
+.modal-dialog-select-one .modal-dialog-message-container {
   display: block;
   padding: 0 1.5rem 0 1.5rem;
   position: absolute;
@@ -60,11 +64,11 @@
   bottom: 6.8rem;
 }
 
-#modal-dialog-select-one h3 {
+.modal-dialog-select-one h3 {
   font-size: 1.8rem;
 }
 
-#modal-dialog-select-one ul {
+.modal-dialog-select-one ul {
   width: 100%;
   height: auto;
   list-style: none;
@@ -74,7 +78,7 @@
   overflow: hidden;
 }
 
-#modal-dialog-select-one ul > li {
+.modal-dialog-select-one ul > li {
   width: 100%;
   padding-top: 1rem;
   margin: 0;
@@ -85,7 +89,7 @@
   line-height: normal;
 }
 
-#modal-dialog-select-one ul > li > button {
+.modal-dialog-select-one ul > li > button {
   color: #fff;
   text-shadow: none;
   text-align: left;
@@ -94,7 +98,7 @@
   border: solid 1px rgba(0, 0, 0, 0.25);
 }
 
-#modal-dialog-select-one ul > li > button:active {
+.modal-dialog-select-one ul > li > button:active {
   background-color: #006f86;
   color: #333;
   text-shadow: 0 0.1rem 0 rgba(255, 255, 255, 0.25);
